@@ -14,13 +14,23 @@ keywords: navicat
 
 
 
+## 方式一：使用破解文件
+
+
+
 #### 激活步骤：
 
 1）官网[下载地址](https://download.navicat.com.cn/download/navicat161_premium_cs_x64.exe)，下载 **Navicat 16.1**，**其他版本不行！！！**
 
 2）安装文件为 **navicat161_premium_cs_x64.exe**，双击安装
 
-3）下载[激活工具](https://pan.quark.cn/s/5119162db6a2#/list/share)
+3）选择一个下载激活工具
+
+​	蓝奏云：[激活工具]()
+
+​	夸克网盘：[激活工具](https://pan.quark.cn/s/5119162db6a2#/list/share)	
+
+​	百度网盘：[激活工具](https://pan.baidu.com/s/1HO88UeMLep7PJo8r1WDlHA) 提取码：np34 
 
 4）下载后是一个压缩包 **Navicat16-jihuo.zip** ，解压后包括**无限试用**和**永久激活**两种方式，小编这里着重介绍下**永久激活**
 
@@ -73,3 +83,38 @@ keywords: navicat
 <img src="/images/notes/navicat/navicat_active_step12.webp" />
 
 <img src="/images/notes/navicat/navicat_active_step13.webp" />
+
+
+
+## 方式二：在线激活
+
+
+
+1）打开[激活网址](https://3.jetbra.in/)，选一个online点进去
+
+<img src="/images/notes/navicat/navicat_active_step14.webp" />
+
+2）下载激活文件
+
+<img src="/images/notes/navicat/navicat_active_step15.webp" />
+
+<img src="/images/notes/navicat/navicat_active_step16.webp" />
+
+<img src="/images/notes/navicat/navicat_active_step17.webp" />
+
+3）修改配置文件，修改 idea 安装目录 bin 下的 idea64.exe.vmoptions
+
+```tex
+# 请修改为ja-netfilter.jar文件所在绝对路径  
+-javaagent:C:/Program Files/JetBrains/jetbra/ja-netfilter.jar=jetbrains  
+--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED  
+--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED  
+```
+
+4）在刚刚的网址获取激活码
+
+<img src="/images/notes/navicat/navicat_active_step18.webp" />
+
+5）启动，填写激活码，点击激活
+
+<img src="/images/notes/navicat/navicat_active_step19.webp" />
